examples/invalid/semanticErr/declaration/basicTypeErr11.wacc
# type mismatch: string <- bool
# Output:
# #semantic error#

#Program:#

begin
  string s = true
end
